# survey_agent

./: Dockerfile  README.md  architeture.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
app/: __init__.py  main.py
app/API/: survey_data_provider.py
app/UI/: __init__.py  analysis.py  components.py  followups.py  navigation.py  speech_controls.py  state.py  survey_app.py
app/core/: config.py
app/data/: real_survey.txt  sample_survey.txt  strategic_outcomes_survey.txt  survey_results.txt
app/models/: analysis.py  survey.py
app/pages/: 02_Analysis.py
app/services/: LLM.py  analysis_agent.py  charts.py  followup_agent.py  survey_database.py  survey_loader.py
app/services/speech/: __init__.py  base.py  google_service.py  openai_service.py
test/: conftest.py  test_speech_service.py
