[tool.poetry]
name = "survey-agent"
version = "0.1.0"
description = ""
authors = ["Benjamin <benjamin-sae-chew@hotmail.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.119.0"
langchain = "^0.3.27"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
