[tool.poetry]
name = "survey-agent"
version = "0.1.0"
description = ""
authors = ["Benjamin <benjamin-sae-chew@hotmail.de>"]
readme = "README.md"

packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.119.0"
langchain = "^0.3.27"
dotenv = "^0.9.9"
streamlit = "^1.39.0"
pydantic = "^2.12.2"
langchain-community = "^0.3.31"
google-genai = "^1.46.0"
google-cloud-speech = "^2.28.1"
google-cloud-texttospeech = "^2.19.1"
openai = "^2.6.1"
matplotlib = "^3.10.7"
pytest = "^8.4.2"
debugpy = "^1.8.17"
pydantic-ai = "^1.6.0"
google = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
